# kaggle-hull-tactical

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  RETROSPECTIVE.md  baseline_model.py  data_exploration.py  kaggle_baseline_model.py  pyproject.toml  submission.py
docs/: EXPERIMENTS-SUMMARY.md  PLAN.md  PRD.md  REVIEW-CLAUDE.md  REVIEW-CODEX.md  STATUS.md  SUBMISSION-001.md  TODO-001.md
docs/retrospectives/: 2025-10-03.md  2025-10-09.md  2025-10-13.md  2025-10-21.md  README.md
experiments/: CONCLUSION.md
experiments/000/: FEATURES-INSIGHTS.md  FEATURES.md  README.md  REPORT.md  feature_analysis.py  make_feature_catalog.py
experiments/001/: SUBMISSION-001.md  cv_evaluate.py  evaluate_baseline.py  make_submission.py  submission.csv
experiments/002/: HYPOTHESES.md  REPORT.md  rolling_eval.py  run_experiments.py
experiments/003/: README.md  REPORT.md  TODO.md  ci_smoke.sh  pipeline.py  run_candidates.py  sensitivity.py  serve.py
kaggle_kernel/: SUBMISSION_GUIDE.md  kaggle_inference.py  kaggle_inference_20251001_debug.py  kaggle_inference_20251003_k200.py  kaggle_inference_20251003_k500.py  kaggle_inference_20251009_h3_k200.py  kaggle_inference_debug.py  kaggle_inference_h3_k200.py  kaggle_inference_k500.py  kaggle_inference_lgbm_k200.py  simple_submission.py
notebooks/: hull-tactical-complete-eda-deep-dive.ipynb  hull-tactical-ensemble-of-solutions.ipynb  hull-tactical-leaderboard-lol.ipynb  hull-tactical-max-leaderboard-remix-insights.ipynb
scripts/: evaluate_baseline.py  make_submission.py  submit.sh
submissions/: submission.py
(+211 files in other folders)
