[project]
name = "hull-tactical-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "kaggle>=1.7.4.5",
    "matplotlib>=3.10.6",
    "plotly>=5.24.1",
    "grpcio>=1.64.1",
    "pyarrow>=14.0.0",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "polars>=1.33.1",
    "tqdm>=4.66.4",
]
